# pybkb

./: Dockerfile  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
aaai-2023-experiments/: acc_analysis.csv  feature_states_order.json  generate_keel_benchmark_results_csv.py  mdl_analysis.csv  palim_common_options.json  run_accuracy_tests.py  run_bkb_keel_benchmarks.py  run_bkb_keel_benchmarks_scores.py  run_bn_keel_benchmark_scores.py  run_bn_keel_benchmarks.py  run_census.py  run_keel_benchmark_crossvalid_from_scores.py  run_keel_benchmark_crossvalid_scores.py  run_keel_benchmark_scores.py  run_keel_benchmarks_from_scores.py  run_tcga.py
bkbs/: aquatic_eco.bkb  bkbs.py  fisherman.bkb  goldfish.bkb  illegal_dumping_ev.bkb  illegal_fishing_ev.bkb  pirate.bkb  tsunami_ev.bkb
examples/: Cycled-Bkb.bkb  Fisherman.bkb  IllegalDumpingEv.bkb  IllegalFishingEv.bkb  Pirate.bkb  TsunamiEv.bkb  aquatic_eco.bkb  aquatic_eco_binary.bkb  goldfish_binary.bkb
notebooks/: BKB Fusion.ipynb  BKB Learning Sprinkler Example.ipynb  Keel Benchmark Analysis.ipynb  Music Features Bench BKBSL.ipynb  TCGA Analysis.ipynb  Tester.ipynb  ThesisProposal_NeedForAuditExample.ipynb  bkb_basics.ipynb
pybkb/: __init__.py  bkb.py  bn.py  exceptions.py  scores.py
scripts/: docker-test.py  extract_keel_datasets_class_var_name.py  find_keel_highest_common_palim.py  make_gene_mutation_datasets.py  make_keel_bkb_datasets.py  make_keel_cross_validation_bkb_datasets.py  run_learning.py
tests/: __init__.py  test_bkb_api.py  test_bkb_reason.py  test_bkbsl.py  test_bn_api.py  (+7 more)
(+99 files in other folders)
