[tool.poetry]
name = "pybkb"
version = "0.1.0"
description = "A python package to perform inference, learning, and analysis of Bayesian Knowledge Bases (BKBs)."
authors = ["Chase Yakaboski <chase.th@dartmouth.edu>"]

[tool.poetry.dependencies]
# Conda installed packages
python = "~3.11"
torch = "2.0.1"
torchaudio = "2.0.2"
torchvision = "0.15.2"
conda-lock = "^2.1.0"

# Required packages needed for pomegranate
apricot-select = "0.6.1"
joblib = "1.3.1"
llvmlite = "0.40.1" 
nose = "1.3.7" 
numba = "0.57.1"
numpy = "1.24.4" 
pomegranate = "1.0.0"
scikit-learn = "1.3.0" 
scipy = "1.11.1" 
threadpoolctl = "3.1.0"

# Installed via pip in conda
gurobipy = "10.0.2"

# Poetry installed packages
networkx = "^2.8.5"
matplotlib = "^3.5.3"
tqdm = "^4.64.0"
pandas = "^1.4.3"
compress-pickle = "^2.1.0"
lz4 = "^4.0.2"
parse = "^1.19.0"
progress = "^1.6"
ipycytoscape = "^1.3.3"
ray = "^2.0.0"
statsmodels = "^0.13.2"
Sphinx = "^5.3.0"
coverage = "^6.5.0"
notebook = "^6.5.2"
pyarrow = "^14.0.1"
jupyter = "^1.0.0"
causal-learn = "^0.1.3.3"
netifaces = "^0.11.0"

# pygobnilp dependency
pygobnilp = { git = "https://yakaboskic@bitbucket.org/yakaboskic/pygobnilp.git", branch = "master" }
#pygobnilp = { path = "../pygobnilp", develop = true }
seaborn = "^0.12.2"
pipreqs = "^0.4.13"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
